--- a/index.html
+++ b/index.html
@@ -11,19 +11,17 @@
     1. Store Mark's and John's mass and height in variables
     2. Calculate both their BMIs using the formula (you can even implement both versions)
     3. Create a Boolean variable 'markHigherBMI' containing information about whether Mark has a higher BMI than John. Test data: § Data 1: Marks weights 78 kg and is 1.69 m tall. John weights 92 kg and is 1.95 m tall. § Data 2: Marks weights 95 kg and is 1.88 m tall. John weights 85 kg and is 1.76 m tall. */ -->
-    <script>
-      let massOfMark = 95;
-      let heightOfMark = 1.88;
-      let massOfJohn = 85;
-      let heightOfJohn = 1.76;
 
-      let markBMI = massOfMark / heightOfMark ** 2;
-      console.log(markBMI);
-      let johnBMI = massOfJohn / heightOfJohn ** 2;
-      console.log(johnBMI);
+    <!-- Coding Challenge #2
+    Use the BMI example from Challenge #1, and the code you already wrote, and improve it.
+    Your tasks:
+    1. Print a nice output to the console,saying who has the higher BMI.The message is either "Mark's BMI is higher than John's!" or "John's BMI is higher than Mark's!"
+    2. Use a template literal to include the BMI values in the outputs.Example:"Mark's BMI (28.3) is higher than John's (23.9)!"
+    Hint: Use an if/else statement 😉 -->
 
-      let markHigherBMI = markBMI > johnBMI;
-      console.log(markHigherBMI);
+    <script src="script.js">
+
+      l
     </script>
   </body>
 </html>
